hw02 - правки по замечаниям